[NewArch] Implemented BlockBlob APIs; Added test cases for implemented APIs; (#170)
* Added autorest as dev dependency; Removed main entry; Adjusted tab size in settings jsons;

* Renamed logger singleton; Added comments for access log and debug log

* Implementing block blob related operations

* Updated swagger for list blocks to make blocklisttype from required to optional

* Finished upload block and get block list

* Finished put block, put block list, get block list and download block blob

* Added listBlobHierarchySegment

* Make "Deleted" from required to optional for BlobItem model; Added get blob properties

* Make `ApiVersionParameter` parameter from required to optional in swagger; Fixed lokijs unit8array persisted issue; Fixed dispath middleware issue when required parameters is 0

* Added support URI decode for container and blob names

* Updated tslint file to skip Array type warning

* Added test for container url; Fixed collection parameter deseriation bug;

* Added test cases for  implemented APIs; Supported URI decoding and special blob names; Optmized debug log for stream; Fixed a bug listing container/blob prefix needs to be regex escaped;

* Removed unused comments

* Update testutils.ts

added URL import for case where not using node 10
